Formation IR V2 (* interfaces)

--- a/src/app/espace-public/detail-formation/detail-formation.component.html
+++ b/src/app/espace-public/detail-formation/detail-formation.component.html
@@ -36,7 +36,7 @@
 
 <!-- les session des formations -->
 
-<h2 class="display-4 my-2 mt-5" >Les sessions disponible</h2>
+<h2 class="display-4 my-2 mt-5" >Les sessions disponibles</h2>
   <div class="row row-cols g-4 p-auto" >
 
    
