--- a/src/app/espace-public/formations/formations.component.html
+++ b/src/app/espace-public/formations/formations.component.html
@@ -1,7 +1,7 @@
 <section class="search">
     <h2 class="display-4">Recherchez une formation</h2>
 
-      <div class="form-floating" style="min-width: 350px;max-width: 400px;color: grey;">
+      <div class="form-floating dynamic-input">
         <input type="text" class="form-control rounded-3" id="floatingInputmc" placeholder="Mots-clés">
         <label for="floatingInputmc">Mots-clés</label>
       </div>
