--- a/src/app/espace-public/navbar-public/navbar-public.component.html
+++ b/src/app/espace-public/navbar-public/navbar-public.component.html
@@ -1,6 +1,6 @@
 <nav  style="opacity: 0.90;border-bottom-left-radius: 15px ;border-bottom-right-radius: 15px ;" class="navbar navbar-expand-lg py-2 bg-info"    >
   <div class="container-fluid">
-    <a class="navbar-brand " routerLink="">Gestion des sessions de formations</a>
+    <h1  >Gestion des sessions de formations</h1>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,7 +32,7 @@
           <a class="btn btn-outline-success mx-auto" (click)="openPopup(login)" >Login
           </a>
         
-          <a class="btn btn-outline-secondary mx-2 "  >Sign up
+          <a class="btn btn-outline-secondary mx-2 " routerLink="/public/sign-up" >Sign up
           </a>
         </li>
         </ul>
@@ -71,11 +71,14 @@
 
         <hr class="my-4">
         <h2 class="fs-5 fw-bold mb-3">Or sign-up</h2>
-        <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
+        <!-- <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
           Sign up as Candidat
         </button>
         <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
           Sign up as Formateur
+        </button> -->
+        <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" routerLink="/public/sign-up" (click)="modal.close('Close click')" type="submit">
+          Sign up
         </button>
       </form>
     </div>
