--- a/src/app/espace-admin/navbar-admin/navbar-admin.component.html
+++ b/src/app/espace-admin/navbar-admin/navbar-admin.component.html
@@ -66,7 +66,7 @@
           <p class="mb-0"> Confirmez votre Déconnexion. </p>
         </div>
         <div class="modal-footer flex-nowrap p-0">
-          <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0 border-end"><strong>Oui, je confirme</strong></button>
+          <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0 border-end" (click)="deconnexion()"><strong>Oui, je confirme</strong></button>
           <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0" (click)="modal.close('Close click')" data-bs-dismiss="modal">Non</button>
         </div>
       </div>
