--- a/src/app/espace-public/detail-formation/detail-formation.component.html
+++ b/src/app/espace-public/detail-formation/detail-formation.component.html
@@ -2,31 +2,31 @@
     <div class="card-header">
         <h5 class="card-title">Formation Details</h5>
     </div>
-    <img src="../../../assets/formation-img/Graphic Design Fundamentals.jpg" class="card-img-top big-card-img-top"  alt="Skyscrapers"/>
+    <img  class="card-img-top big-card-img-top"  [title]="formation.titre" [alt]="formation.titre" [src]="formation.img">
 
     <div class="card-body ">
         
         <ul class="list-group">            
             <li class="list-group-item">
-                <strong>Titre : </strong> <span id="Titre">formation</span>
+                <strong>Titre : </strong> <span id="Titre">{{formation.titre}}</span>
             </li>
             <li class="list-group-item">
-                <strong>description : </strong> <span id="description">description</span>
+                <strong>description : </strong> <span id="description">{{formation.description}}</span>
             </li>
             <li class="list-group-item">
-                <strong>chargeHoraire : </strong> <span id="chargeHoraire">50</span>
+                <strong>chargeHoraire : </strong> <span id="chargeHoraire">{{formation.chargeHoraire}}</span>
             </li>
             <li class="list-group-item">
-                <strong>programme : </strong> <span id="programme">programme</span>
+                <strong>programme : </strong> <span id="programme">{{formation.programme}}</span>
             </li>
             <li class="list-group-item">
-                <strong>niveauDifficulte : </strong> <span id="niveauDifficulte">niveau</span>
+                <strong>niveauDifficulte : </strong> <span id="niveauDifficulte">{{formation.niveau}}</span>
             </li>
             <li class="list-group-item">
-                <strong>motsCles : </strong> <span id="motsCles"  ><span class="badge rounded-pill bg-info mx-1">mot</span></span>
+                <strong>motsCles : </strong> <span id="motsCles" *ngFor="let mot of formation.motsCles" ><span class="badge rounded-pill bg-info mx-1"> {{mot}} </span></span>
             </li>
             <li class="list-group-item">
-                <strong>categories : </strong> <span id="categories" ><span class="badge rounded-pill bg-secondary mx-1">cat</span></span>
+                <strong>categories : </strong> <span id="categories" *ngFor="let cat of formation.categories" ><span class="badge rounded-pill bg-secondary mx-1">cat</span></span>
             </li>
             
             
@@ -38,58 +38,51 @@
 
 <h2 class="display-4 my-2 mt-5" >Les sessions disponibles</h2>
   <div class="row row-cols g-4 p-auto" >
+    <ng-container *ngIf="sessions == []">
+        <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                
+                <div class="card-text">
+                    <ul class="list-group">            
+                        <h5 class="card-title">Pas de session pour le moment</h5>
+                    </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+    </ng-container>
+    <ng-container *ngIf="sessions != []">
+
+        <div class="col" *ngFor="let session of sessions">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Session à venir</h5>
+                <div class="card-text">
+                    <ul class="list-group">            
+                        <li class="list-group-item">
+                            <strong>Formateurs : </strong> <span >{{session.formateurs}}</span>
+                        </li>
+                        <li class="list-group-item">
+                            <strong>Date début : </strong> <span id="description">{{session.dateDebut}} </span>
+                        </li>
+                        <li class="list-group-item">
+                            <strong>Date fin : </strong> <span id="chargeHoraire">{{session.dateFin}}</span>
+                        </li>
+                    </ul>
+                </div>
+              </div>
+              <div class="card-footer">
+                  <a href="/formations/3" >Inscrire</a>
+                <small class="text-muted"> Candidats : {{session.candidats.length}}/15</small>
+              </div>
+            </div>
+          </div>
+    
+    
+    </ng-container>
 
    
-
-    <div class="col">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">Session à venir</h5>
-            <div class="card-text">
-                <ul class="list-group">            
-                    <li class="list-group-item">
-                        <strong>Formateurs : </strong> <span >formateur</span>
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Date début : </strong> <span id="description">date</span>
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Date fin : </strong> <span id="chargeHoraire">date</span>
-                    </li>
-                </ul>
-            </div>
-          </div>
-          <div class="card-footer">
-              <a href="/formations/3" >Inscrire</a><br>
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">Session à venir</h5>
-            <div class="card-text">
-                <ul class="list-group">            
-                    <li class="list-group-item">
-                        <strong>Formateurs : </strong> <span >formateur</span>
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Date début : </strong> <span id="description">date</span>
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Date fin : </strong> <span id="chargeHoraire">date</span>
-                    </li>
-                </ul>
-            </div>
-          </div>
-          <div class="card-footer">
-              <a href="/formations/3" >Inscrire</a><br>
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
 
       
  </div>
