--- a/src/app/espace-public/footer-public/footer-public.component.html
+++ b/src/app/espace-public/footer-public/footer-public.component.html
@@ -31,20 +31,21 @@
   
     <div class="modal-body p-5 pt-0">
       
-      <form class="">
+      <form [formGroup]="formLogin" (ngSubmit)="connecter()">
+        <small *ngIf="formerror" class="error-box mb-3 rounded-3">Email ou bien Password est incorrecte. <br> veuillez verifier vos données.</small> 
+
         <div class="form-floating mb-3">
-          <input type="email" class="form-control rounded-3" id="floatingInput" placeholder="name@example.com">
+          <input type="email" class="form-control rounded-3" formControlName="email" id="floatingInput" placeholder="name@example.com">
           <label for="floatingInput">Email address</label>
         </div>
         <div class="form-floating mb-3">
-          <input type="password" class="form-control rounded-3" id="floatingPassword" placeholder="Password">
+          <input type="password" class="form-control rounded-3" formControlName="password" id="floatingPassword" placeholder="Password">
           <label for="floatingPassword">Password</label>
         </div>
-        <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Log-in</button>
+        <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" [disabled]="formLogin.invalid" type="submit">Log-in</button>
 
-        <!-- <small class="text-body-secondary">By clicking Sign up, you agree to the terms of use.</small>  -->
-        <!-- <br>
-        <button type="button" class="btn btn-secondary" (click)="modal.close('Close click')">Close</button> -->
+        <small class="text-body-secondary">this is a private space . <br> By clicking Log-in, you agree to the terms of use. <br> You are the responsible for any damage you make </small> 
+        
       </form>
     </div>
   </div> 
