--- a/src/app/espace-public/formations/formations.component.html
+++ b/src/app/espace-public/formations/formations.component.html
@@ -1,15 +1,22 @@
 <section class="search">
     <h2 class="display-4">Recherchez une formation</h2>
 
-      <div class="form-floating dynamic-input">
-        <input type="text" class="form-control rounded-3" id="floatingInputmc" placeholder="Mots-clés">
-        <label for="floatingInputmc">Mots-clés</label>
+      <div class="form-floating">
+        <input type="text" [(ngModel)]="motCle" (keyup)="formationsSearched()"  class="form-control rounded-3" id="floatingInputmc" placeholder="Mots-clés">
+        <label for="floatingInputmc" style="color: grey;" >Mot-clé</label>
       </div>
       
 
       <div class="mt-2">
       Ou bien  <button class="btn btn-outline-info" (click)="openPopup(depform)" type="button"> Déposer une demande</button>
     </div>
+
+    <ng-container *ngIf="demandeEnvoyeSuccess">
+    <div  class="alert alert-success mt-3"  role="alert" >La demande est envoyée avec succés!</div>
+    </ng-container>
+    <ng-container *ngIf="demandeEnvoyeEchec">
+      <div  class="alert alert-warning mt-3"  role="alert" >Malhereusement, la demande n'est pas envoyée! </div>
+      </ng-container>
 </section>
 
 <!--  -->
@@ -17,25 +24,26 @@
   <div class="row row-cols g-4 p-auto" >
 
    
-
+<ng-container *ngFor="let formation of formationsFiltered">
     <div class="col">
         <div class="card h-100">
-          <img src="../../../assets/formation-img/Python-for-data-science-in-kenya.png" class="card-img-top" alt="Skyscrapers"/>
+          <img [src]="formation.img" class="card-img-top" [alt]="formation.titre"/>
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">{{formation.titre}}</h5>
             <p class="card-text">
-              This is a wider card with supporting text below as a natural lead-in to
-              additional content. This content is a little bit longer.
+              {{formation.description}}
             </p>
           </div>
           <div class="card-footer">
-              <a routerLink="/public/detail" >En savoir plus</a>
-            <small class="text-muted">Last updated 3 mins ago</small>
+              <a routerLink="/public/detail/{{formation.id}}" >En savoir plus</a>
+            <!-- <small class="text-muted">Last updated 3 mins ago</small> -->
           </div>
         </div>
       </div>
+</ng-container>
 
-      <div class="col">
+
+      <!-- <div class="col">
         <div class="card h-100">
           <img src="../../../assets/formation-img/Graphic Design Fundamentals.jpg" class="card-img-top" alt="Skyscrapers"/>
           <div class="card-body">
@@ -52,77 +60,14 @@
         </div>
       </div>
 
-      <div class="col">
-        <div class="card h-100">
-          <img src="../../../assets/formation-img/formation-javascript-logo.jpg" class="card-img-top" alt="Skyscrapers"/>
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              This is a wider card with supporting text below as a natural lead-in to
-              additional content. This content is a little bit longer.
-            </p>
-          </div>
-          <div class="card-footer">
-              <a href="/formations/3" >En savoir plus</a>
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
-      </div>
-    
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="card-img-top" alt="Skyscrapers"/>
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            This is a wider card with supporting text below as a natural lead-in to
-            additional content. This content is a little bit longer.
-          </p>
-        </div>
-        <div class="card-footer">
-            <a href="/formations/3" >En savoir plus</a>
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-    
-    
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            This is a wider card with supporting text below as a natural lead-in to
-            additional content. This card has even longer content than the first to show
-            that equal height action.
-          </p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-  </div>
-
+     
+ -->
 
 
 
   <!-- pop up deposer une formation -->
 
-  <ng-template #depform let-modal>
+  <ng-template #depform  let-modal>
           
     <div class="modal-content">
       <div class="modal-header p-5 pb-4 border-bottom-0">
@@ -132,19 +77,23 @@
     
       <div class="modal-body p-5 pt-0">
         
-        <form class="">
+        <form [formGroup]="formulaire" (ngSubmit)="envoyerDemande()" >
           <div class="form-floating mb-3">
-            <input type="email" class="form-control rounded-3" id="floatingInput" placeholder="Objet">
+            <input type="text" formControlName="objet" class="form-control rounded-3" id="floatingInput" placeholder="Objet">
             <label for="floatingInput">Objet</label>
           </div>
           <div class=" mb-3">
-            <textarea class="form-control rounded-3" cols="30" rows="10" placeholder="Explication de la demande"></textarea>
+            <textarea class="form-control rounded-3" formControlName="explication" cols="30" rows="10" placeholder="Explication de la demande"></textarea>
             <!-- <input type="" class="form-control rounded-3" id="floatingPassword" placeholder="Password"> -->
           </div>
-          <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Envoyer</button>
+          <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" [disabled]="formulaire.invalid" type="submit">Envoyer</button>
 
         </form>
       </div>
     </div> 
   </ng-template>
+  
+
+
+
   
