--- a/src/app/espace-public/sign-up/sign-up.component.html
+++ b/src/app/espace-public/sign-up/sign-up.component.html
@@ -1,58 +1,58 @@
 
-<div style="text-align: -webkit-center;" >
+<div  >
 
 <!-- formateur ou candidat -->
 
-<form >
+<form *ngIf="role == '' " [formGroup]="formSelect" (ngSubmit)="selected()" >
         
     <label for="role">Vous êtes qui ?</label>
-      <div class="input-group mb-3 dynamic-input">
-        <select class="form-control "  name="" id="role">
-            <option value="" hidden selected>Select ...</option>
-          <option value="1">Candidat</option>
-          <option value="2">Formateur</option>
+      <div class="input-group mb-3 form-control rounded-3">
+        <select class="form-control " formControlName="role"  name="role" id="role">
+          <option value="" hidden selected>Select ...</option>
+          <option value="candidat">Candidat</option>
+          <option value="formateur">Formateur</option>
         </select>
-        <button class="btn btn-primary" type="button" id="button-addon2">Suivant</button>
+        <button class="btn btn-primary" [disabled]="formSelect.invalid" type="submit" id="button-addon2">Suivant</button>
       </div>
 
 </form>
 
 
 <!-- candidat -->
-<form  >
+<form *ngIf="role == 'candidat' " [formGroup]="formCandidat" (ngSubmit)="signCandidat()"  >
 
     <h2>Candidat</h2>
-    <div>
-        <label for="nom">Nom:</label>
-        <input type="text" id="nom" name="nom" formControlName="nom" class="form-control dynamic-input" >
+      <div class="form-floating mb-3">
+        <input type="text" id="nom" name="nom" formControlName="nom" class="form-control rounded-3" placeholder="nom">
+        <label for="nom" style="color: grey;">Nom</label>
       </div>
     
-      <div>
-        <label for="prenom">Prenom:</label>
-        <input type="text" id="prenom" name="prenom"  formControlName="prenom" class=" form-control dynamic-input" >
+      <div class="form-floating mb-3">
+        <input type="text" id="prenom" name="prenom" placeholder="prenom" formControlName="prenom" class=" form-control rounded-3" >
+        <label for="prenom">Prenom</label>
       </div>
     
-      <div>
-        <label for="numeroCarteIdentite">Numero Carte Identite:</label>
-        <input type="text" id="numeroCarteIdentite" name="numeroCarteIdentite" formControlName="numeroCarteIdentite"  class="form-control dynamic-input" >
+      <div class="form-floating mb-3">
+        <input type="text" id="numeroCarteIdentite" name="numeroCarteIdentite" placeholder="numeroCarteIdentite" formControlName="cin"  class="form-control rounded-3" >
+        <label for="numeroCarteIdentite">Numero Carte Identite</label>
       </div>
 
-      <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" formControlName="email" class=" form-control dynamic-input" >
+      <div class="form-floating mb-3">
+        <input type="email" id="email" name="email" placeholder="email" formControlName="email" class=" form-control rounded-3" >
+        <label for="email">Email</label>
       </div>
     
-      <div>
-        <label for="motDePasse">Mot de Passe:</label>
-        <input type="password" id="motDePasse" name="motDePasse" formControlName="motDePasse" class=" form-control dynamic-input" >
+      <div class="form-floating mb-3">
+        <input type="password" id="motDePasse" name="motDePasse" placeholder="motDePasse" formControlName="password" class=" form-control rounded-3" >
+        <label for="motDePasse">Mot de Passe</label>
       </div>
 
-      <div>
-        <label for="motDePasse2">Reécrivez Mot de Passe:</label>
-        <input type="password" id="motDePasse2" name="motDePasse2" formControlName="motDePasse" class=" form-control dynamic-input" >
+      <div class="form-floating mb-3">
+        <input type="password" id="motDePasse2" name="motDePasse2" placeholder="motDePasse2" formControlName="confirmPassword" class=" form-control rounded-3" >
+        <label for="motDePasse2">Reécrivez Mot de Passe</label>
       </div>
     
-      <button type="submit" class="btn form-control btn-success mt-3" style="max-width: 500px;" >Submit</button>
+      <button type="submit" class="btn form-control btn-success mt-3" [disabled]="formCandidat.invalid" style="max-width: 500px;" >Submit</button>
     
 
 
@@ -61,54 +61,54 @@
 
 <!-- formateur -->
 
-<form >
+<form *ngIf="role == 'formateur'" [formGroup]="formFormateur" (ngSubmit)="signFormateur()"  >
 
     <h2>Formateur</h2>
-    <div>
+    <div class="form-floating mb-3">
+        <input type="text" id="nom" name="nom" placeholder="nom" formControlName="nom" class=" form-control rounded-3" >
         <label for="nom">Nom:</label>
-        <input type="text" id="nom" name="nom" formControlName="nom" class=" form-control dynamic-input" >
       </div>
     
-      <div>
+      <div class="form-floating mb-3">
+        <input type="text" id="prenom" name="prenom" placeholder="prenom"  formControlName="prenom" class=" form-control rounded-3" >
         <label for="prenom">Prenom:</label>
-        <input type="text" id="prenom" name="prenom"  formControlName="prenom" class=" form-control dynamic-input" >
       </div>
     
-      <div>
+      <div class="form-floating mb-3">
+        <input type="text" id="numeroCarteIdentite" placeholder="numeroCarteIdentite" name="numeroCarteIdentite" formControlName="cin"  class=" form-control rounded-3" >
         <label for="numeroCarteIdentite">Numero Carte Identite:</label>
-        <input type="text" id="numeroCarteIdentite" name="numeroCarteIdentite" formControlName="numeroCarteIdentite"  class=" form-control dynamic-input" >
       </div>
 
-      <div>
+      <div class="form-floating mb-3">
+        <input type="email" id="email" name="email" placeholder="email" formControlName="email" class=" form-control rounded-3" >
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" formControlName="email" class=" form-control dynamic-input" >
       </div>
     
-      <div>
+      <div class="form-floating mb-3">
+        <input type="password" id="motDePasse" name="motDePasse" placeholder="motDePasse" formControlName="password" class=" form-control rounded-3" >
         <label for="motDePasse">Mot de Passe:</label>
-        <input type="password" id="motDePasse" name="motDePasse" formControlName="motDePasse" class=" form-control dynamic-input" >
       </div>
 
-      <div>
+      <div class="form-floating mb-3">
+        <input type="password" id="motDePasse2" name="motDePasse2" placeholder="motDePasse2" formControlName="confirmPassword" class=" form-control rounded-3" >
         <label for="motDePasse2">Reécrivez Mot de Passe:</label>
-        <input type="password" id="motDePasse2" name="motDePasse2" formControlName="motDePasse" class=" form-control dynamic-input" >
       </div>
     
-      <div>
+      <div class="form-floating mb-3">
+        <input type="text" id="numeroTelephone" name="numeroTelephone" placeholder="numeroTelephone" formControlName="tel" class=" form-control rounded-3" >
         <label for="numeroTelephone">Numero Telephone:</label>
-        <input type="text" id="numeroTelephone" name="numeroTelephone" formControlName="numeroTelephone" class=" form-control dynamic-input" >
       </div>
     
-      <div >
-        <label >Specialites :</label>
-        <input type="text" id="specialites" name="specialites" formControlName="specialites" class=" form-control dynamic-input" >
-        <span class="error" >Vos Specialites sont obligatoire <br></span>
-        <span class="error" >Vos Specialites doit etre separee par une ,</span>
+      <div  class="form-floating mb-3">
+        <input type="text" id="specialites" name="specialites" placeholder="specialites" formControlName="specialites" class=" form-control rounded-3" >
+        <label for="specialites">Specialites :</label>
+        <span class="error" *ngIf="formFormateur.get('specialites')?.value=='' && formFormateur.get('specialites')?.touched " >Vos Specialites sont obligatoire <br></span>
+        <span class="error" *ngIf="formFormateur.get('specialites')?.invalid && formFormateur.get('specialites')?.touched" >Vos Specialites doit etre separee par une ,</span>
       </div>
     
-      <button type="submit" class="btn form-control btn-success mt-3" style="max-width: 500px;" >Submit</button>
+      <button type="submit" class="btn form-control btn-success mt-3" [disabled]="formFormateur.invalid" style="max-width: 500px;" >Submit</button>
     
-
+      {{this.formFormateur.value | json}}
 
 </form>
 
